# FMMxMod-Creator

./: .gitignore  LICENSE  README.md  README_CN.md  main.py  png2ico.py  requirements.txt
Build_Solution/: BUILD_SYSTEM_README.md  DIST_README_STANDALONE.md  PACKAGING_GUIDE.md  STANDALONE_BUILD_GUIDE.md  build_nuitka-single_exe.py  build_nuitka-standalone_data.py  build_single_exe.bat  build_standalone_data.bat  pyproject.toml  test_build_config.py  update_build_version.py
app/: __init__.py
app/.cache/: FMMxMOD-Creator_build-record.json
app/common/: application.py  config.py  config_utils.py  language.py  version_info.py
app/components/: __init__.py  add_function_card.py  cover_block.py  edit_tips_dialog.py  file_display_widget.py  floating_menu_button.py  mod_file_block.py  mod_info_card.py  mod_table_widget.py  separator_block.py  warning_block.py
app/config/: app_config.json  mod_list_table_config.json
app/service/: build_record_service.py  build_service.py  restore_service.py
app/view/: home_interface.py  main_window.py  mod_list_interface.py  settings_interface.py
config/: config.json
